--- a/Solved/index.html
+++ b/Solved/index.html
@@ -22,7 +22,7 @@
 
       <h2>Your Name</h2>
 
-      <img id="bio-image" src="smol me.jpg" alt="Your Name">
+      <img id="bio-image" src="./smol me.jpg" alt="Your Name">
 
       <p>Write a short paragraph or two about yourself, or use placeholder text from <a href="http://www.lipsum.com/">www.lipsum.com</a></p>
     </section>
